--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@emotion/styled": "^11.14.0",
     "@gsap/react": "^2.1.2",
     "@mui/icons-material": "^7.1.0",
+    "@mui/joy": "^5.0.0-alpha.58",
     "@mui/material": "^7.1.0",
+    "@mui/system": "^7.1.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
